syntax = "proto3";

import "auth.proto";
import "consensus.proto";
import "common.proto";

message BroadcastProposalReq {
  Proposal proposal = 1;
  bytes signature = 2;
}

message BroadcastVotelReq {
  Vote vote = 1;
  bytes signature = 2;
}

message BroadcastTransactionReq {
  UnverifiedTransaction untx = 1;
}

message GetUnverifyTxsReq {
  bytes node_address= 1;
  repeated bytes tx_hashes = 2;
}

message GetUnverifyTxsRes {
  repeated UnverifiedTransaction txs = 1;
}

service Network {
  rpc BroadcastProposal(BroadcastProposalReq) returns (Empty) {}
  rpc BroadcastVote(BroadcastVotelReq) returns (Empty) {}
  rpc BroadcastTransaction(BroadcastTransactionReq) returns (Empty) {}

  rpc GetUnverifyTxs(GetUnverifyTxsReq) returns (GetUnverifyTxsRes) {}
}
